location and contact us update

--- a/Location.html
+++ b/Location.html
@@ -26,10 +26,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1>
-						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
-						</p>
+						<h1 class="text-light">Location</h1>
 					</div>
 				</div>
 			</div>
@@ -40,130 +37,48 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
+			<div class="row text-center">
+				<div class="col-lg-12 col-md-12  align-self-center">
+					<h1>Owen Earle Oval</h1>
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
+						23 Bensons Ln, Richmond Lowlands NSW 2753
 					</p>
+
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10287.016478491143!2d150.7534003161049!3d-33.58937358617993!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d7d376c6f33c9%3A0x6853fe275c39da72!2sOwen%20Earle%20Oval!5e0!3m2!1sen!2sau!4v1679549558619!5m2!1sen!2sau"
+						width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
+						Call Nick on 0452583279 if you get lost.
 					</p>
-				</div>
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/about/info.jpg" class="img-fluid w-50 h-70 rounded-circle">
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-lg-12 col-md-12  align-self-center">
+					<p></p>
+					<img src="img/Google_Street_1.png" class="img-fluid">
+					<p></p>
+					<img src="img/Google_Street_2.png" class="img-fluid">
+					<p></p>
+					<img src="img/Google_Street_3.png" class="img-fluid">
+
+					<p class="lead"></p>
+					<img src="img/Google_Maps_Location.png" class="img-fluid">
+
+					<p class="lead">
+						Call Nick on 0452583279 if you get lost.
+					</p>
+
+				</div>
+			</div>
+		</div>
 		</div>
 	</section>
 	<!-- About Info Section End -->
 
-	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
-	text-center bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-envelope"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-danger ">
-						<div class="card-body">
-							<i class="fas fa-car"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-play"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-info ">
-						<div class="card-body">
-							<i class="fas fa-cart-plus"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-tree"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-history"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Services Section End-->
 
-	<!-- About Testimonial Section Start -->
-	<section id="about-testimonial" class="py-5">
-
-	</section>
-	<!-- About Testimonial Section End -->
-
-	<!-- Footer Section Start -->
-	<footer id="footer" class="py-3 text-center text-light">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<h2 class="display-5 mb-0 text-light">Glozzome</h2>
-					<div class="d-flex flex-row justify-content-center p-3">
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-facebook-f"></i>
-							</a>
-						</div>
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-linkedin-in"></i>
-							</a>
-						</div>
-						<div class="px-5">
-							<a href="#">
-								<i class="fab fa-twitter"></i>
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					Glozzome.com © 2019 All Rights Reserved by MrhRifat
-				</div>
-			</div>
-		</div>
-	</footer>
 
 	<!-- Footer Section Start -->
 	<div id="foot-placeholder"></div>
@@ -174,8 +89,9 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/uikit.min.js"></script>
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function(){$("#nav-placeholder").load("navbar.html");});</script>
-	<script>$(function(){$("#foot-placeholder").load("footer.html");});</script>
+	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
+	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
 
 </body>
+
 </html>
