--- a/footer.html
+++ b/footer.html
@@ -14,10 +14,10 @@
         <i class="fa fa-envelope" style="width:30px"> </i> mail@footandball.com.au<br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy<br>
+        <a href="https://www.instagram.com/footandballacademy/" class="link-secondary"><i class="fab fa-instagram" style="width:30px"> </i> @footandballacademy </a><br>
       </div>
       <div class="col-lg-3 align-self-center">
-        <i class="fab fa-facebook-f" style="width:30px"> </i> @footandballacademy<br>
+        <a href="https://www.facebook.com/100090119914421" class="link-secondary"><i class="fab fa-facebook-f" style="width:30px"> </i> facebook.com/footandballacademy </a><br>
       </div>
 
     </div>
