--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
 				<div class="carousel-item crs-img-1 active">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-left">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">School Terms</h2>
+							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Who we are</h2>
 							<p class="lead" style="text-shadow: 1px 1px 1px #000000;">
-								Check out our regular programs running to coincide with NSW School terms.
+								Our core Philosophy defines us. Find out more.
 							</p>
-							<a href="SchoolTerms.html" class="btn btn-success">Read More</a>
+							<a href="OurPhilosophy.html" class="btn btn-success">Read More</a>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item crs-img-2">
 					<div class="container">
 						<div class="carousel-caption mb-5 text-center">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Private Sessions</h2>
+							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Our Staff</h2>
 							<p style="text-shadow: 1px 1px 1px #000000;">
-								Looking for private sessions outside our regular programs?
+								Find out what motivates our coaches. Put names to faces!
 							</p>
-							<a href="PrivateSessions.hmtl" class="btn btn-warning">Read More</a>
+							<a href="staff.hmtl" class="btn btn-warning">Read More</a>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item crs-img-3">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-right">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Register Now</h2>
+							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Programs</h2>
 							<p style="text-shadow: 1px 1px 1px #000000;">
-								Come join the fun!
+								Enrolling for a school term? Or a one of session? Or a 1 on 1? Find out more. 
 							</p>
-							<a href="RegisterNow.html" class="btn btn-info">Register for a Program</a>
+							<a href="Programs.html" class="btn btn-info">Register for a Program</a>
 						</div>
 					</div>
 				</div>
