--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<p style="text-shadow: 1px 1px 1px #000000;">
 								Find out what motivates our coaches. Put names to faces!
 							</p>
-							<a href="staff.hmtl" class="btn btn-warning">Read More</a>
+							<a href="Staff.hmtl" class="btn btn-warning">Read More</a>
 						</div>
 					</div>
 				</div>
@@ -88,8 +88,8 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Our Mission</h3>
-					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
+					<h3>Find Us</h3>
+					<p class="lead mt-2">Address plus a simple Google Maps image right here!</p>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
