--- a/Location.html
+++ b/Location.html
@@ -50,7 +50,7 @@
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 					<p class="lead">
-						Call Nick on 0452583279 if you get lost.
+						Below are more visdual directions onto Bensons Lane. 
 					</p>
 				</div>
 			</div>
@@ -62,13 +62,13 @@
 					<p></p>
 					<img src="img/Google_Street_2.png" class="img-fluid">
 					<p></p>
-					<img src="img/Google_Street_3.png" class="img-fluid">
+					<img src="img/Google_street_3.png" class="img-fluid">
 
 					<p class="lead"></p>
 					<img src="img/Google_Maps_Location.png" class="img-fluid">
 
 					<p class="lead">
-						Call Nick on 0452583279 if you get lost.
+						Call Coach Nick on 0452 583 279 if you get lost.
 					</p>
 
 				</div>
