--- a/Location.html
+++ b/Location.html
@@ -50,17 +50,26 @@
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 					<p class="lead">
-						Below are more visdual directions onto Bensons Lane. 
+						Visual directions, below. 
 					</p>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
+					<p class="lead">
+						Turn on to Bensons Lane off Francis Street.
+					</p>
 					<p></p>
 					<img src="img/Google_Street_1.png" class="img-fluid">
+					<p class="lead">
+						Travel along until you apporoach the expansive car park
+					</p>
 					<p></p>
 					<img src="img/Google_Street_2.png" class="img-fluid">
+					<p class="lead">
+						Notice the green sign. Turn in, veer left.
+					</p>
 					<p></p>
 					<img src="img/Google_street_3.png" class="img-fluid">
 
