--- a/Location.html
+++ b/Location.html
@@ -58,17 +58,17 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						Turn on to Bensons Lane off Francis Street.
+						1) Turn on to Bensons Lane off Francis Street.
 					</p>
 					<p></p>
 					<img src="img/Google_Street_1.png" class="img-fluid">
 					<p class="lead">
-						Travel along until you apporoach the expansive car park
+						2) Travel along until you approach the expansive car park.
 					</p>
 					<p></p>
 					<img src="img/Google_Street_2.png" class="img-fluid">
 					<p class="lead">
-						Notice the green sign. Turn in, veer left.
+						Notice the yellow and green sign burried in the trees. Turn in, then veer left.
 					</p>
 					<p></p>
 					<img src="img/Google_street_3.png" class="img-fluid">
