--- a/Location.html
+++ b/Location.html
@@ -68,7 +68,7 @@
 					<p></p>
 					<img src="img/Google_Street_2.png" class="img-fluid">
 					<p class="lead">
-						Notice the yellow and green sign burried in the trees. Turn in, then veer left.
+						3) Notice the yellow and green sign burried in the trees. Turn in, then veer left.
 					</p>
 					<p></p>
 					<img src="img/Google_street_3.png" class="img-fluid">
