--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 				<div class="carousel-item crs-img-1 active">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-left">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">School Terms</h2>
-							<p class="lead" style="text-shadow: 1px 1px 1px #000000;">
-								Check out our regular programs running to coincide with NSW School terms.
+							<div>
+								<h2 class="display-4 text-light"><span class="emboss2">School Terms</span></h2>
+							</div>
+							<p class="lead ">
+								<span class="emboss">Check out our regular programs running to coincide with NSW School terms.</span>
 							</p>
 							<a href="SchoolTerms.html" class="btn btn-success">Read More</a>
 						</div>
@@ -43,20 +45,20 @@
 				<div class="carousel-item crs-img-2">
 					<div class="container">
 						<div class="carousel-caption mb-5 text-center">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Private Sessions</h2>
-							<p style="text-shadow: 1px 1px 1px #000000;">
-								Looking for private sessions outside our regular programs?
+							<h2 class="display-4 text-light"><span class="emboss2">Private Sessions</span></h2>
+							<p>
+								<span class="emboss">Looking for private sessions outside our regular programs?</span>
 							</p>
-							<a href="PrivateSessions.hmtl" class="btn btn-warning">Read More</a>
+							<a href="PrivateSessions.html" class="btn btn-warning">Read More</a>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item crs-img-3">
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-right">
-							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Register Now</h2>
-							<p style="text-shadow: 1px 1px 1px #000000;">
-								Come join the fun!
+							<h2 class="display-4 text-light"><span class="emboss2">Register Now</span></h2>
+							<p>
+								<span class="emboss">Come join the fun!</span>
 							</p>
 							<a href="RegisterNow.html" class="btn btn-info">Register for a Program</a>
 						</div>
@@ -89,7 +91,8 @@
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Our Mission</h3>
-					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
+					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded
+						in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
@@ -113,7 +116,7 @@
 					<div class="col mt-5 pt-4 gC">
 						<h3 class="text-light">Football is the World Game.</h3>
 						<p class="lead">
-							Foot and Ball Academy is proud to be apart of that.
+							Foot and Ball Academy is proud to be a part of that.
 						</p>
 					</div>
 				</div>
@@ -131,8 +134,9 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/uikit.min.js"></script>
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function(){$("#nav-placeholder").load("navbar.html");});</script>
-	<script>$(function(){$("#foot-placeholder").load("footer.html");});</script>
+	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
+	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
 
 </body>
+
 </html>
