--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<div class="carousel-caption pb-5 mb-5 text-right">
 							<h2 class="display-4 text-light" style="text-shadow: 1px 1px 1px #000000;">Programs</h2>
 							<p style="text-shadow: 1px 1px 1px #000000;">
-								Enrolling for a school term? Or a one of session? Or a 1 on 1? Find out more. 
+								Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more. 
 							</p>
 							<a href="Programs.html" class="btn btn-info">Register for a Program</a>
 						</div>
