--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<div class="carousel-caption pb-5 mb-5 text-right">
 							<h2 class="display-4 text-light"><span class="emboss2">Programs</span></h2>
 							<p>
-								<span class="emboss">Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more. 
+								<span class="emboss">Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more.
 								</span>
 							</p>
 							<a href="Programs.html" class="btn btn-info">Register for a Program</a>
@@ -95,6 +95,19 @@
 					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded
 						in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
 
+				</div>
+				<div class="col-lg-4 col-md-4">
+					<i class="fas fa-futbol mb-3"></i>
+					<h3>April Easter Holiday registration</h3>
+					<p class="lead mt-2">Click below. Places are filling fast!</p>
+					<a target="_blank" href="RegisterNow.html">
+						<img src="/img/register.png" alt="Forest" style="width:150px">
+					</a>
+
+				</div>
+			</div>
+			<div class="row py-5 text-center">
+				<div class="col-lg-12 col-md-12">
 					<h3>Find Us</h3>
 
 					<p class="lead">
@@ -106,17 +119,6 @@
 						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10287.016478491143!2d150.7534003161049!3d-33.58937358617993!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d7d376c6f33c9%3A0x6853fe275c39da72!2sOwen%20Earle%20Oval!5e0!3m2!1sen!2sau!4v1679549558619!5m2!1sen!2sau"
 						width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-					<p class="lead mt-2">Address plus a simple Google Maps image right here!</p>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-futbol mb-3"></i>
-					<h3>April Easter Holiday registration</h3>
-					<p class="lead mt-2">Click below. Places are filling fast!</p>
-					<a target="_blank" href="RegisterNow.html">
-						<img src="/img/register.png" alt="Forest" style="width:150px">
-					</a>
-
 				</div>
 			</div>
 		</div>
