--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<i class="fas fa-futbol mb-3"></i>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2">We are a Private Football Academy, focusing on player development from 5 and up! Founded
-						in Richmond, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
+						in the Hawkesbury, NSW, we specialise in small group as well as 1 on 1 training programs.</p>
 
 				</div>
 				<div class="col-lg-4 col-md-4">
