--- a/Staff.html
+++ b/Staff.html
@@ -28,7 +28,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Staff</h1>
 						<p class="lead">
-							Highly enthusiatic and qualified and ready to start a training plan!
+							Find our indvidual Staff Profiles below.
 						</p>
 					</div>
 				</div>
@@ -45,10 +45,25 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Trainer</h1>
 					<p class="lead">
-						A beautiful man and wonderful coach. He will yell at your kids with just the right amount of enthusiasm. 30
-            years of playing experience including representive experience in England. Captain of Madsen Magic.
+				Blurb
+My background and pathway into soccer coaching is rather unorthodox. Well-travelled and educated, I believe my life experiences outside of football will contribute the most to my continued growth as an Academy coach. Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, and never received in my youth. 
+Playing History (2000 – 2011)
+Representative football (now NPL) from U/13’s.
+U/13’s – U/15’s – Hawkesbury City FC.
+U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage). 
+U/18’s – Granville Rage (half season) | Macarthur Rams (half season).
+(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). Friendly non-league matches against Staines, Rochdale, Reading, etc. 
+(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London. 
+(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London. 
+(2011) Day trial with EFL League 2 club (outcome: unsuccessful). 
+(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.  
+Teacher History 
+(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.
+(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
+(2022 – current) Kids soccer-football coach. 
+
 						</p>
-						<p>Fully certified</p>
+						<p>Qualifications</p>
         
             <ul class="a">
               <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
