--- a/Staff.html
+++ b/Staff.html
@@ -43,7 +43,7 @@
 			<div class="row">
 
 				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>Head Trainer</h1>
+					<h1>Head Coach and Founder</h1>
 					<p class="lead">
 				Blurb
 My background and pathway into soccer coaching is rather unorthodox. Well-travelled and educated, I believe my life experiences outside of football will contribute the most to my continued growth as an Academy coach. Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, and never received in my youth. 
