--- a/Staff.html
+++ b/Staff.html
@@ -45,22 +45,25 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-				Blurb
-My background and pathway into soccer coaching is rather unorthodox. Well-travelled and educated, I believe my life experiences outside of football will contribute the most to my continued growth as an Academy coach. Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, and never received in my youth. 
-Playing History (2000 – 2011)
-Representative football (now NPL) from U/13’s.
-U/13’s – U/15’s – Hawkesbury City FC.
-U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage). 
-U/18’s – Granville Rage (half season) | Macarthur Rams (half season).
-(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). Friendly non-league matches against Staines, Rochdale, Reading, etc. 
-(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London. 
-(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London. 
-(2011) Day trial with EFL League 2 club (outcome: unsuccessful). 
-(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.  
-Teacher History 
-(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.
-(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
-(2022 – current) Kids soccer-football coach. 
+				My background and pathway into soccer coaching is rather unorthodox. 
+						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to my continued growth as an Academy coach. 
+						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
+						and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, 
+						and never received in my youth. </p> 
+					<h>Playing History (2000 – 2011)</h2>
+			<p>Representative football (now NPL) from U/13’s. </p>
+			<p>U/13’s – U/15’s – Hawkesbury City FC.</p>
+			<p>U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p> 
+			U/18’s – Granville Rage (half season) | Macarthur Rams (half season).
+			(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). Friendly non-league matches against Staines, Rochdale, Reading, etc. 
+			(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London. 
+			(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London. 
+			(2011) Day trial with EFL League 2 club (outcome: unsuccessful). 
+			(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.  
+		Teacher History 
+		(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.
+		(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
+(		2022 – current) Kids soccer-football coach. 
 
 						</p>
 						<p>Qualifications</p>
