--- a/Staff.html
+++ b/Staff.html
@@ -50,20 +50,21 @@
 						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
 						and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, 
 						and never received in my youth. </p> 
-					<h>Playing History (2000 – 2011)</h2>
+					<h2>Playing History (2000 – 2011)</h2>
 			<p>Representative football (now NPL) from U/13’s. </p>
 			<p>U/13’s – U/15’s – Hawkesbury City FC.</p>
 			<p>U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p> 
-			U/18’s – Granville Rage (half season) | Macarthur Rams (half season).
-			(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). Friendly non-league matches against Staines, Rochdale, Reading, etc. 
-			(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London. 
-			(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London. 
-			(2011) Day trial with EFL League 2 club (outcome: unsuccessful). 
-			(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.  
-		Teacher History 
-		(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.
-		(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
-(		2022 – current) Kids soccer-football coach. 
+			<p>U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
+			<p>(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). 
+				Friendly non-league matches against Staines, Rochdale, Reading, etc.</p> 
+			<p>(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p> 
+			<p>(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p> 
+			<p>(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p> 
+			<p>(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.</p>  
+					<h2>Teacher History</h2> 
+		<p>(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
+		<p>(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
+		<p>(2022 – current) Kids soccer-football coach.</p> 
 
 						</p>
 						<p>Qualifications</p>
