--- a/Staff.html
+++ b/Staff.html
@@ -45,7 +45,7 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-				My background and pathway into soccer coaching is rather unorthodox. 
+				<p>My background and pathway into soccer coaching is rather unorthodox. 
 						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to my continued growth as an Academy coach. 
 						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
 						and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, 
@@ -67,7 +67,7 @@
 		<p>(2022 – current) Kids soccer-football coach.</p> 
 
 						</p>
-						<p>Qualifications</p>
+						<h2>Qualifications</h2>
         
             <ul class="a">
               <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
