--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -79,7 +79,7 @@
 							We warmly <u>welcome everyone!</u> From players who have never played before to those with some years of
 							experience. It does not matter to us. Because at Foot and Ball Academy self-improvement is a player’s
 							primary challenge.
-						<p><em>“How good you were yesterday is yesterday’s achievement. Not todays.” </em></p>
+						<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em>
 
 						</p>
 					</div>
@@ -191,10 +191,10 @@
 						Often overlooked by society, a sustainable mindset towards playing football is a crucial component
 						of our philosophy at Foot and Ball Academy. That is:
 					</p>
-					<p><em>“First and foremost, calmness and composure on the ball.”</em></p>
-					<p>Too often kids’ games are overrun by an over enthusiastic crowd, creating a stressful environment,
-						and thus a very subtle, game-related ‘panic’ from the young players.</p>
-					<p><em>“Panic is a young player’s first hurdle to overcome in football.”</em></p>
+					<em>“First and foremost, calmness and composure on the ball.” - Coach Nick</em>
+					Too often kids’ games are overrun by an over enthusiastic crowd, creating a stressful environment,
+						and thus a very subtle, game-related ‘panic’ from the young players.
+					<em>“Panic is a young player’s first hurdle to overcome in football.” - Coach Nick</em>
 					<p>This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
 						Examples include:</p>
 
