--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -79,7 +79,8 @@
 							We warmly <u>welcome everyone!</u> From players who have never played before to those with some years of
 							experience. It does not matter to us. Because at Foot and Ball Academy self-improvement is a player’s
 							primary challenge.
-						<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em>
+						<p class="lead">
+							<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em></p>
 
 						</p>
 					</div>
