--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -192,11 +192,15 @@
 						Often overlooked by society, a sustainable mindset towards playing football is a crucial component
 						of our philosophy at Foot and Ball Academy. That is:
 					</p>
-					<em>“First and foremost, calmness and composure on the ball.” - Coach Nick</em>
+					<p class="lead">
+						<em>“First and foremost, calmness and composure on the ball.” - Coach Nick</em></p>
+					<p class="lead">
 					Too often kids’ games are overrun by an over enthusiastic crowd, creating a stressful environment,
-						and thus a very subtle, game-related ‘panic’ from the young players.
-					<em>“Panic is a young player’s first hurdle to overcome in football.” - Coach Nick</em>
-					<p>This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
+						and thus a very subtle, game-related ‘panic’ from the young players. </p>
+					<p class="lead">
+						<em>“Panic is a young player’s first hurdle to overcome in football.” - Coach Nick</em></p>
+					<p class="lead">
+					This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
 						Examples include:</p>
 
 					<ol type="1">
@@ -204,9 +208,10 @@
 						<li>Suddenly kicking the ball away at the sound of the crowd yelling.</li>
 						<li>Overwhelmed when under pressure from an opponent and kicking the ball away.</li>
 						<li>Easily distracted during a game.</li>
-					</ol>
+					</ol></p>
 
-					<p>The primary approach we use to overcome this is a simple ideological substitution. We replace the
+					<p class="lead">	
+					The primary approach we use to overcome this is a simple ideological substitution. We replace the
 						concept of <em>winning</em> with that of <em>improving</em>. By doing this, we alter the players mental
 						incentives
 						when playing. With no leagues or ladders or tables, the player is freed up to focus on their personal
@@ -235,7 +240,7 @@
 							aspect
 							of the debate that is often neglected is the importance of valuing time.</p>
 
-						<p>
+						<p class="lead">
 							It is undeniable, one of the lures of the World’s game is its ‘tricky’ nature. The challenges of football
 							can only be mastered by one who aims to play with confidence, calmness, and a healthy sense of
 							freedom on the field. For that reason, lots of time is required to give young players every chance to
@@ -243,7 +248,7 @@
 							challenges of the game more enjoyable later in life.
 						</p>
 
-						<p>
+						<p class="lead">
 							At Foot and Ball Academy, respecting the value of time is a foundation of our teaching philosophy.
 							Too often, time is wasted, leading to bad habits. From arriving late to sessions, to the hasty
 							introduction of in-game management e.g., kicking the ball out under “pressure.” For this reason, we
@@ -251,9 +256,9 @@
 							constructive mistakes during a session. i.e., taking risk over ‘safe play.’
 						</p>
 
-						<p><em>“I would rather see a young player try something they just learnt, make a mistake with it, and
+						<p class="lead"><em>“I would rather see a young player try something they just learnt, make a mistake with it, and
 								concede a goal, versus panicking, then booting the ball away, whilst feeling that sense of strategic
-								safety. It’s too young for any of that. Leave strategy for later in their life.”</em></p>
+								safety. It’s too young for any of that. Leave strategy for later in their life.” - Coach Nick</em></p>
 
 					</div>
 
