--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -203,7 +203,7 @@
 					This very mild ‘panic’ typically expresses itself in subtle ways. Not obvious to the inexperienced.
 						Examples include:</p>
 
-					<ol type="1">
+					<p class="lead"><ol type="1">
 						<li>Hiding from the ball during the game.</li>
 						<li>Suddenly kicking the ball away at the sound of the crowd yelling.</li>
 						<li>Overwhelmed when under pressure from an opponent and kicking the ball away.</li>
