--- a/Staff.html
+++ b/Staff.html
@@ -46,10 +46,10 @@
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
 				<p>My background and pathway into soccer coaching is rather unorthodox. 
-						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to my continued growth as an Academy coach. 
+						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. 
 						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
-						and want to ensure everyone that my main goal is to provide insight into the parts of coaching I now consider important, 
-						and never received in my youth. </p> 
+						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, 
+						and never received in my youth. e.g. improvment over winning. </p> 
 					<h2>Playing History (2000 – 2011)</h2>
 			<p>Representative football (now NPL) from U/13’s. </p>
 			<p>U/13’s – U/15’s – Hawkesbury City FC.</p>
