--- a/Staff.html
+++ b/Staff.html
@@ -45,26 +45,39 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-				<p>My background and pathway into soccer coaching is rather unorthodox. 
+				<p class="lead">
+					My background and pathway into soccer coaching is rather unorthodox. 
 						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. 
 						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this, 
 						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, 
 						and never received in my youth. e.g. improvment over winning. </p> 
 					<h2>Playing History (2000 – 2011)</h2>
-			<p>Representative football (now NPL) from U/13’s. </p>
-			<p>U/13’s – U/15’s – Hawkesbury City FC.</p>
-			<p>U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p> 
-			<p>U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
-			<p>(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). 
+			<p class="lead">
+				Representative football (now NPL) from U/13’s. </p>
+			<p class="lead">
+				U/13’s – U/15’s – Hawkesbury City FC.</p>
+			<p class="lead">
+				U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p> 
+			<p class="lead">
+				U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
+			<p class="lead">
+				(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and Melwood (Liverpool). 
 				Friendly non-league matches against Staines, Rochdale, Reading, etc.</p> 
-			<p>(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p> 
-			<p>(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p> 
-			<p>(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p> 
-			<p>(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.</p>  
+			<p class="lead">
+				(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p> 
+			<p class="lead">
+				(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p> 
+			<p class="lead">
+				(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p> 
+			<p class="lead">
+				(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting, plyometrics, etc.</p>  
 					<h2>Teacher History</h2> 
-		<p>(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
-		<p>(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
-		<p>(2022 – current) Kids soccer-football coach.</p> 
+		<p class="lead">
+			(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
+		<p class="lead">
+			(2013-2016) University tutorial tutor. During post graduate studies, took undergraduate tutorials. Basic class preparation and delivery for a semester. 
+		<p class="lead">
+			(2022 – current) Kids soccer-football coach.</p> 
 
 						</p>
 						<h2>Qualifications</h2>
