--- a/Staff.html
+++ b/Staff.html
@@ -89,7 +89,7 @@
             </ul>
           </div>
 				
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
+				<div class="col-lg-6 col-md-6 align-self-top text-center">
 					<img src="img/nick.jpg" class="img-fluid w-50 h-60 rounded-circle">
 				</div>
 			</div>
