--- a/navbar.html
+++ b/navbar.html
@@ -20,6 +20,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
+            <a class="dropdown-item" href="Highlights.html">Training Videos</a>
             <a class="dropdown-item" href="RegisterNow.html">Register Now</a>
           </div>
         </li>
@@ -32,6 +33,7 @@
             <a class="dropdown-item" href="Location.html">Location</a>
             <a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
             <a class="dropdown-item" href="Staff.html">Staff</a>
+            <a class="dropdown-item" href="Privacy.html">Privacy</a>
           </div>
         </li>
 
