--- a/Highlights.html
+++ b/Highlights.html
@@ -19,81 +19,82 @@
 	<div id="nav-placeholder"></div>
 	<!-- Nav Section End -->
 
-		<!-- About Section Start -->
-		<section id="about" class="text-center py-5 text-light">
-			<div class="inner-overlay">
-				<div class="container">
-					<div class="row">
-						<div class="col mt-5 pt-4">
-							<h1 class="text-light">Training Video Highlights</h1>
-							<p class="lead">
-								See the drills and skills. Learn at home!
-							</p>
-						</div>
+	<!-- About Section Start -->
+	<section id="about" class="text-center py-5 text-light">
+		<div class="inner-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col mt-5 pt-4">
+						<h1 class="text-light">Training Video Highlights</h1>
+						<p class="lead">
+							See the drills and skills. Learn at home!
+						</p>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- About Section End -->
+		</div>
+	</section>
+	<!-- About Section End -->
 
 	<!-- Gallery Section Start -->
-	<section id="gallery" class="py-5" uk-lightbox>
+	<section class="py-5" uk-lightbox>
 		<div class="container">
 			<div class="row text-center">
 				<div class="col">
 					<h2 class="mb-0">Training</h2>
-					<p class="lead m-0">Click to check out our photos</p>
+					<p class="lead m-0">Click to check out our videos</p>
 				</div>
 			</div>
 			<div class="row mt-3">
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery1.jpg">
-						<img src="img/gallery1.jpg" class="img-fluid">
-					</a>
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer1.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery2.jpg">
-						<img src="img/gallery2.jpg" class="img-fluid">
-					</a>
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer2.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery3.jpg">
-						<img src="img/gallery3.jpg" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery4.jpg">
-						<img src="img/gallery4.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery5.jpg">
-						<img src="img/gallery5.jpg" class="img-fluid">
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery6.jpg">
-						<img src="img/gallery6.jpg" class="img-fluid">
-					</a>
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer3.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
 				</div>
 			</div>
 			<div class="row mt-3">
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery7.jpg">
-						<img src="img/gallery7.jpg" class="img-fluid">
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer4.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer5.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer6.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
+				</div>
+			</div>
+			<div class="row mt-3">
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer7.mp4#t=0.1" type="video/mp4" style="width:100%">
+					</video>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery8.jpg">
-						<img src="img/gallery8.jpg" class="img-fluid">
-					</a>
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer8.mp4#t=0.5" type="video/mp4" style="width:100%">
+					</video>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4">
-					<a href="img/gallery9.jpg">
-						<img src="img/gallery9.jpg" class="img-fluid">
-					</a>
+					<video preload="metadata" controls="" loop="">
+						<source src="/img/vids/soccer9.mp4#t=0.5" type="video/mp4" style="width:100%">
+					</video>
 				</div>
 			</div>
 		</div>
@@ -111,6 +112,8 @@
 	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
 	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
 	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
+
+
 
 </body>
 
