--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,9 +27,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">About Us</h1>
+						<h1 class="text-light">Staff</h1>
 						<p class="lead">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, saepe.
+							Find out about School Term programs below.
 						</p>
 					</div>
 				</div>
@@ -41,19 +42,62 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>What We Do</h1>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
-					<p class="lead">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ex quaerat magnam obcaecati repellendus
-						voluptatum quisquam architecto iure, aliquam labore.
-					</p>
-				</div>
-				<div class="col-lg-6 col-md-6 align-self-center text-center">
-					<img src="img/about/info.jpg" class="img-fluid w-50 h-70 rounded-circle">
+				<p class="lead">
+					Our core programs run according to the school terms. 10-week ‘curriculums’ designed to afford us the time to build towards better long-term player development. 
+					These programs give us the opportunity to get to know the player and better identify their strengthens and weaknesses with the ball.</p> 
+				<p class="lead">	
+				A typical curriculum will cover core topics plus combinations of each. E.g., dribbling, ball mastery, shotting, etc. Followed by dribbling + ball mastery, dribbling + shooting, etc.</p> 
+				<p class="lead">	
+				All classes are limited to 6 enrolees or players. (The odd trialist may also attend, see trialist guidelines for more information). This ensures maximum attention can be provided by the coach to each player,
+					whilst numbers are enough to ensure healthy social interactions, we design meaningful game-based exercises, and most importantly exciting 1 on 1 duels!</p>  
+				<p class="lead">	
+				At this early stage of our business lifecycle, we offer the school-term programs to players aged between 5 and 12 years old. The sessions are a general mix of skill level, until we achieve the necessary 
+					numbers to begin offering different skill level sessions.</p> 
+				<p class="lead">	
+				There is a small choice in sessions, running across two nights per week for Term 2 of 2023 (24th April – 30th June 2023). These days and times include:</p>
+					<h3>Monday afternoon-evenings</h3>
+			<p class="lead">
+				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
+			<p class="lead">
+				5pm - 6pm: 8-,9-, and 10-yearolds.</p>
+			<p class="lead">
+				6.15pm - 7.15pm: 11-, and 12-year olds.</p> 
+					<h3>Wednesday afternoon-evenings</h3>
+			<p class="lead">
+				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
+			<p class="lead">
+				5pm - 6pm: 8-,9-, and 10-yearolds.</p>
+			<p class="lead">
+				6.15pm - 7.15pm: 11-, and 12-year olds.</p> 
+				<h3>Pricing and Player Commitments</h3>
+			  
+			<p class="lead">
+				All term programs have a minimum commitment of 1 session per week for that term i.e., 10 sessions. </p>
+			<p class="lead">		
+ 				If a player wants to join after the term has started, no worries! It is still a minimum commitment 
+				of 1 session per week for the remainder of weeks in that school term.</p>
+			<p class="lead">
+				Payments are upfront at the beginning of term priced at: $25 per player per session or $250 upfront for the term. Or the remainder 
+				of the weeks as calculated from the players arrival during the term.</p> 
+			<p class="lead">
+				Players are to select a minimum of one time slot per week (from the available times listed above) according to their age group. 
+				Ages are determined based on the players age as of December 2023.</p>
+			<p class="lead">
+				If a player wishes to do 2 sessions per week there is a $5 discount for the second session. Pricing then becomes: 
+				$25 for the first session and $20 for the second through the 10-week program. That equals an upfront payment of $450. 
+				Similar calculations as above if the player arrives during the term.</p>
+				<h3>Siblings</h3>
+				Siblings also receive a $5 discount. That is, the first sibling is $25 per session for the term, and all subsequent siblings are $20 per term program.</p>
+				<h3>Joining Fees and Uniform Fees</h3>
+			<p class="lead">
+				None! At Foot and Ball Academy we believe our no joining fee and no uniform fee is a financial advantage in this market space. We pride ourselves on having no additional fees beyond payment of the players direct footballing education. 
+				We strive to provide affordable access to our services as reasonably possible. Player improvement is truly at the foundation of Football and Ball Academy. 
+				To enrol, click here.</p> 
+
+          </div>
+				
+				<div class="col-lg-6 col-md-6 align-self-top text-center">
+					<img src="img/nick.jpg" class="img-fluid w-50 h-60 rounded-circle">
 				</div>
 			</div>
 		</div>
@@ -63,66 +107,7 @@
 	<!-- About Services Section Start -->
 	<section id="about-services" class="py-5 text-light
 	text-center bg-dark">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-envelope"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-danger ">
-						<div class="card-body">
-							<i class="fas fa-car"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-play"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row mt-3">
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-info ">
-						<div class="card-body">
-							<i class="fas fa-cart-plus"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-primary ">
-						<div class="card-body">
-							<i class="fas fa-tree"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="card bg-success ">
-						<div class="card-body">
-							<i class="fas fa-history"></i>
-							<h2 class="text-light m-0">Lorem Ipsum</h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quasi magni placeat.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 	</section>
 	<!-- About Services Section End-->
 
