--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -55,22 +55,21 @@
 					numbers to begin offering different skill level sessions.</p> 
 				<p class="lead">	
 				There is a small choice in sessions, running across two nights per week for Term 2 of 2023 (24th April – 30th June 2023). These days and times include:</p>
-					<h3>Monday afternoon-evenings</h3>
+			<h3>Monday afternoon-evenings</h3>
 			<p class="lead">
 				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
 			<p class="lead">
-				5pm - 6pm: 8-,9-, and 10-yearolds.</p>
+				5pm - 6pm: 8-,9-, and 10-year-olds.</p>
 			<p class="lead">
-				6.15pm - 7.15pm: 11-, and 12-year olds.</p> 
-					<h3>Wednesday afternoon-evenings</h3>
+				6.15pm - 7.15pm: 11-, and 12-year-olds.</p> 
+			<h3>Wednesday afternoon-evenings</h3>
 			<p class="lead">
 				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
 			<p class="lead">
-				5pm - 6pm: 8-,9-, and 10-yearolds.</p>
+				5pm - 6pm: 8-,9-, and 10-year-olds.</p>
 			<p class="lead">
-				6.15pm - 7.15pm: 11-, and 12-year olds.</p> 
-				<h3>Pricing and Player Commitments</h3>
-			  
+				6.15pm - 7.15pm: 11-, and 12-year-olds.</p> 
+			<h3>Pricing and Player Commitments</h3>
 			<p class="lead">
 				All term programs have a minimum commitment of 1 session per week for that term i.e., 10 sessions. </p>
 			<p class="lead">		
