--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -27,7 +27,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Staff</h1>
+						<h1 class="text-light">School Term Programs</h1>
 						<p class="lead">
 							Find out about School Term programs below.
 						</p>
