--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -55,21 +55,21 @@
 					numbers to begin offering different skill level sessions.</p> 
 				<p class="lead">	
 				There is a small choice in sessions, running across two nights per week for Term 2 of 2023 (24th April – 30th June 2023). These days and times include:</p>
-			<h3>Monday afternoon-evenings</h3>
+			<h3> Monday afternoon-evenings </h3>
 			<p class="lead">
-				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
+				3.45pm - 4.45pm: 5-,6-,and 7-year-olds. </p>
 			<p class="lead">
-				5pm - 6pm: 8-,9-, and 10-year-olds.</p>
+				5pm - 6pm: 8-,9-, and 10-year-olds. </p>
 			<p class="lead">
-				6.15pm - 7.15pm: 11-, and 12-year-olds.</p> 
-			<h3>Wednesday afternoon-evenings</h3>
+				6.15pm - 7.15pm: 11-, and 12-year-olds. </p> 
+			<h3> Wednesday afternoon-evenings </h3>
 			<p class="lead">
-				3.45pm - 4.45pm: 5-,6-,and 7-year-olds.</p>
+				3.45pm - 4.45pm: 5-,6-,and 7-year-olds. </p>
 			<p class="lead">
-				5pm - 6pm: 8-,9-, and 10-year-olds.</p>
+				5pm - 6pm: 8-,9-, and 10-year-olds. </p>
 			<p class="lead">
-				6.15pm - 7.15pm: 11-, and 12-year-olds.</p> 
-			<h3>Pricing and Player Commitments</h3>
+				6.15pm - 7.15pm: 11-, and 12-year-olds. </p> 
+			<h3> Pricing and Player Commitments </h3>
 			<p class="lead">
 				All term programs have a minimum commitment of 1 session per week for that term i.e., 10 sessions. </p>
 			<p class="lead">		
@@ -85,9 +85,10 @@
 				If a player wishes to do 2 sessions per week there is a $5 discount for the second session. Pricing then becomes: 
 				$25 for the first session and $20 for the second through the 10-week program. That equals an upfront payment of $450. 
 				Similar calculations as above if the player arrives during the term.</p>
-				<h3>Siblings</h3>
+			<h3>Siblings</h3>
+			<p class="lead">
 				Siblings also receive a $5 discount. That is, the first sibling is $25 per session for the term, and all subsequent siblings are $20 per term program.</p>
-				<h3>Joining Fees and Uniform Fees</h3>
+			<h3>Joining Fees and Uniform Fees</h3>
 			<p class="lead">
 				None! At Foot and Ball Academy we believe our no joining fee and no uniform fee is a financial advantage in this market space. We pride ourselves on having no additional fees beyond payment of the players direct footballing education. 
 				We strive to provide affordable access to our services as reasonably possible. Player improvement is truly at the foundation of Football and Ball Academy. 
